--- a/backend/src/main/webapp/app/views/dashboard/home.html
+++ b/backend/src/main/webapp/app/views/dashboard/home.html
@@ -3,7 +3,7 @@
         <div class="col-xs-12">
             <h1 class="page-header">
             	Dashboard
-            	<span class="btn-group" ng-show="!group6">
+            	<span class="btn-group">
 					<button type="button" class="btn btn-primary btn-sm btn-outline" style="min-width: 50px;" ng-class="{'active': group.btnActive}" ng-repeat="group in groupDatas" ng-click="changeTab(group)">
 				  		<i class="glyphicon" ng-class="{'glyphicon-align-left': group.id == 1, 'glyphicon-align-center': group.id == 2}"></i>
 				  	</button>
