--- a/backend/src/main/webapp/app/views/forecast/main.html
+++ b/backend/src/main/webapp/app/views/forecast/main.html
@@ -41,20 +41,19 @@
 									   	<span class="input-group-addon"><i class="fa fa-search"></i></span>
 									    <input type="text" class="form-control" placeholder="keyword search" ng-model="formData.keyword">
 									  </div>
-									  
 									  <div class="input-group input-daterange">
 									  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 									  	<select name="dateColumnName" class="form-control" ng-model="formData.dateColumnName" 
-									  	        ng-options="option.col as option.text for option in dateColumnNames" style="width: 180px;" ng-change="dateColumnNameChanged()">
+									  	        ng-options="option.col as option.text for option in dateColumnNames" style="width: 130px;" ng-change="dateColumnNameChanged()">
 											<option value="">--เลือกวันที่--</option>
 								  		</select>
-									    <input type="text" id="dateFrom" name="dateFrom" class="form-control" 
-									    	   ng-disabled="!formData.dateColumnName" readonly="readonly" date-parser="dd/MM/yyyy" 
-									    	   style="width: 120px;" ng-model="formData.dateFrom" ng-change="dateFromChange()" placeholder="วันที่เริ่มต้น">
-									    <span class="input-group-addon">ถึง</span>
-									    <input type="text" id="dateTo" name="dateTo" class="form-control" 
-									    	   ng-disabled="!formData.dateColumnName" readonly="readonly" date-parser="dd/MM/yyyy" 
-									    	   style="width: 120px;" ng-model="formData.dateTo" ng-change="dateToChange()" placeholder="วันที่สิ้นสุด">
+					                    <input name="dateFrom" type='text' class="form-control dtPicker" style="width: 130px; font-size: 0.9em;" 
+					                    	   ng-disabled="!formData.dateColumnName"
+					                    	   ng-model="formData.dateFrom" placeholder="วันที่เริ่มต้น" date-parser="dd/MM/yyyy HH:mm" />
+						                <span class="input-group-addon">ถึง</span>
+					                    <input name="dateTo" type='text' class="form-control dtPicker" style="width: 130px; font-size: 0.9em;"
+					                    	   ng-disabled="!formData.dateColumnName"
+					                    	   ng-model="formData.dateTo" placeholder="วันที่สิ้นสุด" date-parser="dd/MM/yyyy HH:mm" />
 									  </div>
 									  
 									  <div class="pull-right" ng-show="group2 || group5">
@@ -170,6 +169,7 @@
 						</div>
 					</div> <!-- / panel panel-info -->
 				
+					<div style="position: relative;">
 					<div class="table-responsive" style="padding: 0;">
 						<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 							<thead>
@@ -270,7 +270,7 @@
 							        	{{ data['payTypeName'] == 'ผ่อนปิด' ? ((data['round'] && data['totalRound']) ? (data['round'] + '/' + data['totalRound']) : '') : '-' }}
 							      	</td>
 							      	
-							      	<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['appointDate'] | date:gb_dateFormat }}</td>
+							      	<td style="vertical-align: middle; text-align: center; white-space: nowrap;">{{ data['appointDate'] | date:gb_dateTimeFormat }}</td>
 									
 									<td style="vertical-align: middle; text-align: right; white-space: nowrap;">
 										<span class="label" style="color: black; background-color: rgba(229, 181, 20, 0.7); font-size: 13px;">{{ data['appointAmount'] | number:2 }}</span>
@@ -279,12 +279,12 @@
 									<td style="vertical-align: middle; text-align: right; white-space: nowrap;">{{ data['forecastPercentage'] ? (data['forecastPercentage'] + '%') : '' }}</td>
 									
 									<td style="vertical-align: middle; white-space: nowrap; padding: 0; text-align: center;">
-										<form editable-form name="rowform" onaftersave="paidtDateChange(data, $data)">
-											<div class="input-group editable-cus" style="width: 100%;">
-											    <span ng-click="rowform.$show()" editable-text="data['paidDate']" e-name="paidDate" style="cursor: pointer;"
-											    	  e-style="text-align: center; width: 100px;" e-my-datepicker="datePickerOptions" e-date-parser="dd/MM/yyyy">
-											    	{{ (data['paidDate'] | date:gb_dateFormat) || 'แก้ใขวันชำระจริง' }}
-											    </span>
+										<form editable-form name="rowform" onaftersave="paidtDateChange(data, $data, $index)">
+											<div class="input-group editable-cus" style="width: 100%; position: inherit;">
+											    <span ng-click="paidDateEdit(rowform)" editable-text="data['paidDate']" e-name="paidDate" e-id="paidDate_index_{{$index}}" style="cursor: pointer;" 
+											          e-style="text-align: center; width: 100px; font-size: 0.9em"  e-class="paidDate" e-date-parser="dd/MM/yyyy">
+										        	{{ (data['paidDate'] | date:gb_dateFormat) || 'แก้ใขวันชำระจริง' }}
+										        </span>
 											    <span class="input-group-addon" ng-show="rowform.$visible">
 											    	<i class="fa fa-reply" name="paidDateCancelBtn" style="cursor: pointer;" ng-disabled="rowform.$waiting" ng-click="rowform.$cancel()" title="ยกเลิก" ng-show="rowform.$visible"></i>&nbsp;
 													<button type="submit" ng-show="rowform.$visible" ng-disabled="rowform.$waiting">
@@ -313,6 +313,7 @@
 								</tr>
 							</tbody>
 						</table>
+					</div>
 					</div>
                 	
                 </div>
