--- a/backend/src/main/webapp/app/views/payment/detail.html
+++ b/backend/src/main/webapp/app/views/payment/detail.html
@@ -16,7 +16,7 @@
 				    <input type="text" class="form-control" placeholder="keyword search" ng-model="formData.keyword">
 				  </div>
 				  
-				  <div class="input-group input-daterange" ng-show="isShowPage">
+				  <!-- <div class="input-group input-daterange" ng-show="isShowPage">
 				  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 				    <input type="text" id="dateFrom" name="dateFrom" class="form-control" 
 				    	   readonly="readonly" date-parser="dd/MM/yyyy" 
@@ -25,6 +25,14 @@
 				    <input type="text" id="dateTo" name="dateTo" class="form-control" 
 				    	   readonly="readonly" date-parser="dd/MM/yyyy" 
 				    	   style="width: 120px;" ng-model="formData.dateTo" ng-change="dateToChange()" placeholder="วันที่สิ้นสุด">
+				  </div> -->
+				  <div class="input-group input-daterange" ng-show="isShowPage">
+				  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                    <input name="dateFrom" type='text' class="form-control dtPicker" style="width: 130px; font-size: 0.9em;"
+                    	   ng-model="formData.dateFrom" placeholder="วันที่เริ่มต้น" date-parser="dd/MM/yyyy HH:mm" />
+	                <span class="input-group-addon">ถึง</span>
+                    <input name="dateTo" type='text' class="form-control dtPicker" style="width: 130px; font-size: 0.9em;"
+                    	   ng-model="formData.dateTo" placeholder="วันที่สิ้นสุด" date-parser="dd/MM/yyyy HH:mm" />
 				  </div>
 				  
 				  &nbsp;&nbsp;
@@ -107,7 +115,7 @@
 				</td>
 				<td ng-repeat="h in headers" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 					{{ 
-					   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
+					   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateTimeFormat) : 
 					   h.dataType == 'num' ? (data[h.columnName] | number:2) : data[h.columnName] 
 					}}
 				</td>
