--- a/backend/src/main/webapp/app/views/product/search.html
+++ b/backend/src/main/webapp/app/views/product/search.html
@@ -104,20 +104,16 @@
 				
 				  <div class="panel-body">
 			  			<fieldset> <legend>จันทร์ - ศุกร์</legend>
-							<div class="form-inline pull-right">
-								<div class="form-group">
-									<label class="control-label">เวลาเริ่มงาน</label> <input type="text" ng-disabled="!normalWorkingDayEnable"
-										class="form-control" style="width: 100px;"
-										dn-timepicker="{{ timesCfg.format }}" ng-model="normalStartTime"
-										min-time="{{ startTimesCfg.minTime }}" max-time="{{ startTimesCfg.maxTime }}"
-										step="{{ timesCfg.step }}" />
-								</div>
-								<div class="form-group">
-									<label class="control-label">ถึง</label> <input type="text" ng-disabled="!normalWorkingDayEnable"
-										class="form-control" style="width: 100px;"
-										dn-timepicker="{{ timesCfg.format }}" ng-model="normalEndTime"
-										min-time="{{ endTimesCfg.minTime }}" max-time="{{ endTimesCfg.maxTime }}"
-										step="{{ timesCfg.step }}" />
+							<div class="form-inline pull-right">	
+								<label class="control-label">เวลาเริ่มงาน</label>
+								<div class="input-group input-daterange">
+					                    <input name="normalStartTime" type='text' class="form-control input-sm dtPicker" style="width: 100px; font-size: 0.9em;"
+					                    	   ng-disabled="!normalWorkingDayEnable" autocomplete="off"
+					                    	   ng-model="normalStartTime" date-parser="HH:mm" />
+						                <span class="input-group-addon">ถึง</span>
+					                    <input name="normalEndTime" type='text' class="form-control input-sm dtPicker" style="width: 100px; font-size: 0.9em;"
+					                    	   ng-disabled="!normalWorkingDayEnable" autocomplete="off"
+					                    	   ng-model="normalEndTime" date-parser="HH:mm" />
 								</div>
 								<div class="checkbox">
 								    <input type="checkbox" ng-model="normalWorkingDayEnable">
@@ -129,19 +125,15 @@
 					 <div class="panel-body">
 					 	<fieldset> <legend>เสาร์</legend>
 							<div class="form-inline pull-right">
-								<div class="form-group">
-									<label class="control-label">เวลาเริ่มงาน</label> <input type="text" ng-disabled="!satWorkingDayEnable"
-										class="form-control" style="width: 100px;"
-										dn-timepicker="{{ timesCfg.format }}" ng-model="satStartTime"
-										min-time="{{ startTimesCfg.minTime }}" max-time="{{ startTimesCfg.maxTime }}"
-										step="{{ timesCfg.step }}" />
-								</div>
-								<div class="form-group">
-									<label class="control-label">ถึง</label> <input type="text" ng-disabled="!satWorkingDayEnable"
-										class="form-control" style="width: 100px;"
-										dn-timepicker="{{ timesCfg.format }}" ng-model="satEndTime"
-										min-time="{{ endTimesCfg.minTime }}" max-time="{{ endTimesCfg.maxTime }}"
-										step="{{ timesCfg.step }}" />
+								<label class="control-label">เวลาเริ่มงาน</label>
+								<div class="input-group input-daterange">
+				                    <input name="satStartTime" type='text' class="form-control input-sm dtPicker" style="width: 100px; font-size: 0.9em;"
+				                    	   ng-disabled="!satWorkingDayEnable" autocomplete="off"
+				                    	   ng-model="satStartTime" date-parser="HH:mm" />
+					                <span class="input-group-addon">ถึง</span>
+				                    <input name="satEndTime" type='text' class="form-control input-sm dtPicker" style="width: 100px; font-size: 0.9em;"
+				                    	   ng-disabled="!satWorkingDayEnable" autocomplete="off"
+				                    	   ng-model="satEndTime" date-parser="HH:mm" />
 								</div>
 								<div class="checkbox">
 								    <input type="checkbox" ng-model="satWorkingDayEnable">
@@ -153,19 +145,15 @@
 					<div class="panel-body">
 						<fieldset> <legend>อาทิตย์</legend>
 							<div class="form-inline pull-right">
-								<div class="form-group">
-									<label class="control-label">เวลาเริ่มงาน</label> <input type="text" ng-disabled="!sunWorkingDayEnable"
-										class="form-control" style="width: 100px;"
-										dn-timepicker="{{ timesCfg.format }}" ng-model="sunStartTime"
-										min-time="{{ startTimesCfg.minTime }}" max-time="{{ startTimesCfg.maxTime }}"
-										step="{{ timesCfg.step }}" />
-								</div>
-								<div class="form-group">
-									<label class="control-label">ถึง</label> <input type="text" ng-disabled="!sunWorkingDayEnable"
-										class="form-control" style="width: 100px;"
-										dn-timepicker="{{ timesCfg.format }}" ng-model="sunEndTime"
-										min-time="{{ endTimesCfg.minTime }}" max-time="{{ endTimesCfg.maxTime }}"
-										step="{{ timesCfg.step }}" />
+								<label class="control-label">เวลาเริ่มงาน</label>
+								<div class="input-group input-daterange">
+				                    <input name="sunStartTime" type='text' class="form-control input-sm dtPicker" style="width: 100px; font-size: 0.9em;"
+				                    	   ng-disabled="!sunWorkingDayEnable" autocomplete="off"
+				                    	   ng-model="sunStartTime" date-parser="HH:mm" />
+					                <span class="input-group-addon">ถึง</span>
+				                    <input name="sunEndTime" type='text' class="form-control input-sm dtPicker" style="width: 100px; font-size: 0.9em;"
+				                    	   ng-disabled="!sunWorkingDayEnable" autocomplete="off"
+				                    	   ng-model="sunEndTime" date-parser="HH:mm" />
 								</div>
 								<div class="checkbox">
 								    <input type="checkbox" ng-model="sunWorkingDayEnable">
