--- a/backend/src/main/webapp/app/views/working/tab_forecast.html
+++ b/backend/src/main/webapp/app/views/working/tab_forecast.html
@@ -5,6 +5,13 @@
 .editable-controls {
 	width: 100%;
 }
+.bootstrap-datetimepicker-widget {
+	/* position: relative; */
+	/* bottom: 220px !important; */
+}
+.payType {
+	width: auto;
+}
 </style>
 
 <div class="panel panel-info" style="margin: 0;">
@@ -27,6 +34,7 @@
 	</div>
 </div>
 
+<div style="position: relative;">
 <div class="table-responsive" style="padding: 0; min-height: 223px;">
 	<table class="table table-striped table-hover table-bordered" style="margin: 0;">
 		<thead>
@@ -53,7 +61,7 @@
 				</td>
 				<td style="white-space: nowrap; vertical-align: middle; text-align: center;">{{ item.createdDateTime | date:gb_dateTimeFormat }}</td>
 		      	<td style="white-space: nowrap; vertical-align: middle;">
-			        <span editable-select="item.payType" e-name="payType" e-form="rowform" e-required e-ng-options="s as s.name for s in forecastObj.payTypeList track by s.name" e-ng-change="item.payType = $data">
+			        <span editable-select="item.payType" e-name="payType" e-class="payType" e-form="rowform" e-required e-ng-options="s as s.name for s in forecastObj.payTypeList track by s.name" e-ng-change="item.payType = $data">
 			        	<!-- {{ item.payTypeId ? (forecastObj.payTypeList | filter:{id:item.payTypeId})[0].name : ''}} -->
 			        	{{ item.payType.name }}
 			        </span>
@@ -65,8 +73,8 @@
 			        <span editable-text="item.totalRound" e-name="totalRound" e-type="number" e-form="rowform" e-ng-show="item.payType.isRound" e-style="width: 50px;" e-title="จำนวนงวดทั้งหมด"></span>
 		      	</td>
 		      	<td style="white-space: nowrap; vertical-align: middle; text-align: center;" ng-class="{'has-error':appointDateErr}">
-			        <span e-title="กรุณากรอกข้อมูล" editable-text="item.appointDate" e-readonly="readonly" e-name="appointDate" e-form="rowform" e-class="form-control" e-date-parser="dd/MM/yyyy" e-my-datepicker="datePickerOptions">
-			        	{{ item.appointDate | date:gb_dateFormat }}
+			        <span e-title="กรุณากรอกข้อมูล" editable-text="item.appointDate" e-id="appointDate_index_{{$index}}" e-name="appointDate" e-form="rowform" e-style="width: 130px; font-size: 0.9em;" e-class="form-control forecastAppointDate" e-date-parser="dd/MM/yyyy HH:mm">
+			        	{{ item.appointDate | date:gb_dateTimeFormat }}
 			        </span>
 		      	</td>
 		      	<td style="white-space: nowrap; vertical-align: middle; text-align: right;" ng-class="{'has-error':appointAmountErr}">
@@ -91,7 +99,7 @@
 			        </form>
 			        <div class="buttons" ng-show="!rowform.$visible">
 			          <i class="fa fa-times fa-lg user-action-icon-danger" ng-click="forecastObj.removeItem(item._id)" title="ลบ" ng-show="isEditable"></i>&nbsp;
-			          <i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข" ng-show="isEditable"></i>&nbsp;
+			          <i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="forecastObj.edit(rowform)" title="แก้ใข" ng-show="isEditable"></i>&nbsp;
 			        </div>  
 		      	</td>
 			</tr>
@@ -102,5 +110,5 @@
 		<i class="fa fa-plus"></i>
 	</button>
 </div>
-					
+</div>			
                
