--- a/backend/src/main/webapp/app/views/working/tab_payment.html
+++ b/backend/src/main/webapp/app/views/working/tab_payment.html
@@ -36,7 +36,7 @@
 				</td>
 				<td ng-repeat="h in headersPayment" style="vertical-align: middle; white-space: nowrap;" ng-class="{'comm-text-align-center': h.dataType == 'date', 'comm-text-align-right': h.dataType == 'num'}">
 					{{ 
-					   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateFormat) : 
+					   h.dataType == 'date' ? (data[h.columnName] | date:gb_dateTimeFormat) : 
 					   h.dataType == 'num' ? (data[h.columnName] | number:2) : data[h.columnName] 
 					}}
 				</td>
