--- a/backend/src/main/webapp/app/views/working/view.html
+++ b/backend/src/main/webapp/app/views/working/view.html
@@ -85,7 +85,7 @@
 		<div style="background-color: #356190; margin-bottom: 1px; height: 238px; overflow-y: auto;" class="comm-rcorners-1" ng-repeat="detail in taskDetail">
 			<div ng-repeat="f in fieldName" class="col-xs-3" style="font-size: 13px; padding: 0; color: #E1E2E3;">
 				<div class="col-xs-5" 
-					 style="text-align: right; margin: 0; min-height: 38px; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word; cursor: pointer;"
+					 style="padding: 1px 5px 0 0; text-align: right; margin: 0; min-height: 38px; border-top: 1px solid #234E7C; background-color: #264F7A; word-wrap: break-word; cursor: pointer;"
 					 ng-click="showMore(f, detail)">
 					<span>{{ f.columnNameAlias || f.columnName }}</span>
 				</div>
@@ -95,7 +95,7 @@
 				     <div ng-style="f.colorBg ? {'display': 'inline-block'} : '' ">
 						 <span ng-class="{label: f.colorBg}" 
 						 	   style="display: -webkit-box;-webkit-line-clamp: 2;-webkit-box-orient: vertical;overflow: hidden;text-overflow: ellipsis; text-align: left;"
-						       ng-style="f.colorBg ? {'color': f.colorFont, 'background-color': f.colorBg, 'font-size': '13px', 'padding': '3px 5px 0px 3px', 'min-height': '25px', 'line-height': '1.1'} : f.colorFont ? {'color': f.colorFont} : '' ">
+						       ng-style="f.colorBg ? {'color': f.colorFont, 'background-color': f.colorBg, 'font-size': '13px', 'padding': '0 3px 0px 3px', 'min-height': '23px', 'max-height': '35px', 'line-height': '1.32999999', 'position':'absolute', 'top':'1px'} : f.colorFont ? {'color': f.colorFont} : '' ">
 								   {{ 
 									   f.dataType == 'sys_owner' ? detail[f.columnName][0].showname :
 									   f.dataType == 'date' ? (detail[f.columnName] | date:gb_dateFormat) : 
@@ -199,11 +199,8 @@
 				<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
 				  <div class="panel-body">
 				  	<div class="row" ng-repeat="file in files"> 
-				  		<div style="text-align: center;" ng-class="{'col-xs-8': haveDateInput, 'col-xs-12': !haveDateInput}">
-						  	<button class="btn btn-primary col-xs-12" type="button" style="margin-bottom: 3px;" ng-click="printNotice(file.id, file.dateInput)" ng-disabled="file.isDateInput && !file.dateInput">{{ file.templateName }}</button>
-				  		</div>
-				  		<div class="col-xs-4" style="text-align: center;" ng-if="file.isDateInput">
-				  			<input type="text" class="form-control date-input" placeholder="ข้อมูลวันที่" ng-disabled="false" readonly="readonly" date-parser="dd/MM/yyyy" ng-model="file.dateInput">
+				  		<div style="text-align: center;" class="col-xs-12">
+						  	<button class="btn btn-primary col-xs-12" type="button" style="margin-bottom: 3px;" ng-click="printNotice(file.id)">{{ file.templateName }}</button>
 				  		</div>
 				  	</div>
 				  </div>
@@ -227,7 +224,7 @@
 	                <button type="button" class="close" ng-click="dismissModalAsk()" aria-hidden="true">&times;</button>
 	                <h4 class="modal-title">บันทึกผลการติดตาม</h4>
 	            </div>
-	            <div class="modal-body">            	    	
+	            <div class="modal-body" style="min-height: 419px;">
 					<div class="panel panel-default" style="margin-bottom: 0; margin-top: 0;">
 					  <div class="panel-body">
 					  
@@ -249,23 +246,22 @@
 							  <div class="col-xs-6">
 								<div class="form-group">
 									<label class="control-label">วันนัดชำระ | ยอดนัดชำระ</label>
-									<div class="input-group">
-									  <input type="text" name="appointDate" class="form-control datepickerAppointDate" style="padding-left: 12px;" 
-											   readonly="readonly" date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.appointDate" 
-											   ng-change="askModalObj.appointDateClick()">
-									  <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-									  <input type="number" class="form-control" ng-model="askModalObj.trace.appointAmount" ng-disabled="!askModalObj.trace.appointDate" />
-									</div>
+									<div class="input-group input-daterange">
+					                    <input ng-model-options="{ updateOn: 'blur' }" name="appointDate" type='text' class="form-control input-sm dtPicker" style="width: 130px; font-size: 0.9em;" 
+					                    	   ng-model="askModalObj.trace.appointDate" date-parser="dd/MM/yyyy HH:mm" />
+									  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+					                    <input type="number" class="form-control input-sm" ng-model="askModalObj.trace.appointAmount" ng-disabled="!askModalObj.trace.appointDate" />
+									</div>						
 								</div>
 							  </div>
 							  <div class="col-xs-6">					  
 								<div class="form-group">
 									<label class="control-label">วันนัด Call</label>
-									<div class="input-group">
-										<input type="text" name="nextTimeDate" class="form-control datepickerNextTimeDate" style="padding-left: 12px;" 
-											   readonly="readonly" date-parser="dd/MM/yyyy" ng-model="askModalObj.trace.nextTimeDate">
-					                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-								    </div>
+								    <div class="input-group input-daterange">
+					                    <input name="nextTimeDate" type='text' class="form-control input-sm dtPicker" style="font-size: 0.9em;" 
+					                    	   ng-model="askModalObj.trace.nextTimeDate" date-parser="dd/MM/yyyy HH:mm" />
+									  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+									</div>
 								</div>
 							  </div>
 							  <div class="col-xs-12">
