--- a/backend/src/main/webapp/app/styles/main.css
+++ b/backend/src/main/webapp/app/styles/main.css
@@ -1,14 +1,14 @@
 /* Space out content a bit */
 @font-face {
-    font-family: 'Trirong';
-    src: url('/backend/app/font/Trirong-Regular.ttf') format('truetype');
+    font-family: 'ChakraPetch';
+    src: url('/backend/app/font/ChakraPetch-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 body {
     padding-bottom: 20px;
-    font-family: 'Trirong';
+    font-family: 'ChakraPetch';
     line-height: 1.32999999;
 }
 
